--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -837,4 +837,12 @@ http://www.tandfonline.com/doi/pdf/10.1080/10615806.2012.734810?needAccess=true}
 https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7177019/pdf/fpsyg-11-00470.pdf},
    year = {2020}
 }
+
+@article{Zerna2022,
+   author = {Zerna, J., Scheffel, C., Kührt, C. and Strobel, A.},
+   title = {When easy is not preferred: An effort discounting for estimating subjective values of taks},
+   journal = {PsyArXiv},
+   DOI = {10.31234/osf.io/ysh3q},
+   year = {2022},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
