--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -839,7 +839,7 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7177019/pdf/fpsyg-11-00470.pdf},
 }
 
 @article{Zerna2022,
-   author = {Zerna, J., Scheffel, C., Kührt, C. and Strobel, A.},
+   author = {Zerna, J. and Scheffel, C. and Kührt, C. and Strobel, A.},
    title = {When easy is not preferred: An effort discounting for estimating subjective values of taks},
    journal = {PsyArXiv},
    DOI = {10.31234/osf.io/ysh3q},
