--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -661,7 +661,7 @@ The paradigm code, as well as the R Markdown file used to analyze the data and w
 
 \leavevmode\hypertarget{ref-Zerna2022}{}%
 \CSLLeftMargin{26. }
-\CSLRightInline{Zerna, S., J. \& Strobel, A. When easy is not preferred: An effort discounting for estimating subjective values of taks. \emph{PsyArXiv} (2022) doi:\href{https://doi.org/10.31234/osf.io/ysh3q}{10.31234/osf.io/ysh3q}.}
+\CSLRightInline{Zerna, J., Scheffel, C., Kührt, C. \& Strobel, A. When easy is not preferred: An effort discounting for estimating subjective values of taks. \emph{PsyArXiv} (2022) doi:\href{https://doi.org/10.31234/osf.io/ysh3q}{10.31234/osf.io/ysh3q}.}
 
 \leavevmode\hypertarget{ref-Simmons2012}{}%
 \CSLLeftMargin{27. }
