includes citation of T2

--- a/06_Paper/COG-ED/CERED.bib
+++ b/06_Paper/COG-ED/CERED.bib
@@ -856,4 +856,14 @@
   publisher = {Springer Science and Business Media {LLC}},
 }
 
+@Misc{ScheffelZerna2022,
+  author    = {Scheffel, Christoph and Zerna, Josephine and Gärtner, Anne and Dörfel, Denise and Strobel, Alexander},
+  month     = {Mar},
+  title     = {Estimating individual subjective values of emotion regulation strategies},
+  year      = {2022},
+  groups    = {CERED},
+  publisher = {PsyArXiv},
+  url       = {psyarxiv.com/wr8qx},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
