added preprint of T1

--- a/06_Paper/COG-ED/CERED.bib
+++ b/06_Paper/COG-ED/CERED.bib
@@ -866,4 +866,15 @@
   url       = {psyarxiv.com/wr8qx},
 }
 
+@Misc{ZernaScheffel2022,
+  author    = {Zerna, Josephine and Scheffel, Christoph and Kührt, Corinna and Strobel, Alexander},
+  month     = {Mar},
+  title     = {When easy is not preferred: An effort discounting paradigm for estimating subjective values of tasks},
+  year      = {2022},
+  doi       = {10.31234/osf.io/ysh3q},
+  groups    = {CERED},
+  publisher = {PsyArXiv},
+  url       = {psyarxiv.com/ysh3q},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
