--- a/06_Paper/ER-ED/Revision/method.Rmd
+++ b/06_Paper/ER-ED/Revision/method.Rmd
@@ -102,7 +102,7 @@ The order of the three regulation blocks (distraction, distancing, and suppressi
 Each of the blocks consisted of 20 trials showing neutral (Block 1) and negative (Blocks 2, 3, 4, 5) pictures.
 Each trial began with a fixation cross that lasted 3 to 5 seconds (random uniform distributed).
 It was followed by neutral or negative picture for a total of 6 seconds.
-After each block, participants retrospectively rated their subjective emotional arousal on a continous scale (ranging from "not at all aroused" to "very highly aroused") and their subjective effort (ranging from "not very exhausting" to "very exhausting") using a slider on screen.
+After each block, participants retrospectively rated their subjective emotional arousal on a continuous scale (ranging from "not at all aroused" to "very highly aroused") and their subjective effort (ranging from "not very exhausting" to "very exhausting") using a slider on screen.
 
 *Part two: ER effort discounting.* <br> In the second part, ER effort discounting will take place.
 The procedure of the discounting will follow the COG-ED paradigm by Westbrook et al.[-@Westbrook2013] with a major change.
